--- a/ConsoleMP3Player.csproj
+++ b/ConsoleMP3Player.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{8EF5BCAF-5AF2-435D-921B-BEB6DCDC7B7A}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CmdPlayer</RootNamespace>
-    <AssemblyName>CmdPlayer</AssemblyName>
+    <RootNamespace>ConsoleMP3Player</RootNamespace>
+    <AssemblyName>ConsoleMP3Player</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -49,9 +49,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Core">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.CSharp">
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Player.cs" />
